Ensure text doesn't overflow on page re-size.

--- a/css/all_kp_searches.css
+++ b/css/all_kp_searches.css
@@ -39,6 +39,7 @@
 }
 #chado-custom-search-form ul li .result-row .result-left {
   width: 85%;
+  overflow-y: hidden;
 }
 #chado-custom-search-form ul li .result-row .result-right {
   width: 14%;
